# hana-voice-saas

./: # Railway Internal Networking & Environm.md  ## Maqsam Voice agent Integration.MD  .clineignore  .clinerules  .env  .env.example  .env.local.example  .env.railway.example  .gitignore  API_CLEANUP_SUMMARY.md  CLEANUP_PLAN.md  CLOUD_VERIFICATION_CHECKLIST.md  COMPREHENSIVE_FLOW_DOCUMENTATION.md  CURRENT_SYSTEM_DOCUMENTATION.md  DEPLOYMENT  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NODEJS.md  DEPLOYMENT_PYTHON.md  Dockerfile  Dockerfile.nextjs  Dockerfile.production  FINAL_DEPLOYMENT_GUIDE.md  FINAL_STRUCTURE_REVIEW.md  FRONTEND_MIGRATION_PLAN.md  GOLDEN_NUGGET_MVP.md  HANA_VOICE_SAAS_AUDIT_REPORT.md  HANA_VOICE_SAAS_SPECIFICATION.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEPLOYMENT_TESTING.md  LOCAL_TESTING_GUIDE.md  MIGRATION_IMPLEMENTATION_CHECKLIST.md  MIGRATION_PLAN_RENDER_PYTHON_TYPESCRIPT.md  MVP_READINESS_ISSUES.md  POST_MIGRATION_CHECKLIST.md  PRODUCTION_READINESS_PLAN.md  PROJECT_DOCUMENTATION.md  PROMPT.md  RAILPACK_STARTUP_FIX.md  (+51 more)
Python/voice_service/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  build.sh  deploy_verification.py  download_model.bat  extract_model.bat  nixpacks.toml  nixpacks.toml.backup  pyproject.toml  pyproject.toml.backup  railway.json  render.yaml  requirements.txt  requirements.txt.backup  setup_voice_models.py  start.sh  test_models.py
Python/voice_service/app/: __init__.py  main.py  maqsam_handler.py  models.py  services.py  utils.py
api-service/: Dockerfile  requirements.txt
(+198 files in other folders)
