[project]
name = "hana-voice-service"
version = "0.1.0"
description = "Arabic Healthcare Voice Service for automated patient surveys"
authors = [
    {name = "Hana Voice SaaS Team", email = "dev@hanavoice.com"},
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "coqui-tts>=0.27.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "vosk==0.3.45",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "librosa>=0.11.0",
    "starlette==0.27.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "soundfile==0.12.1",
    "resampy==0.4.2",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "rich==13.7.0",
    "loguru==0.7.2",
    "pathlib2==2.3.7",
    "python-dotenv==1.0.0",
    "PyJWT==2.8.0",
    "httpx==0.26.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]
